...
    <string name="ah_total_card_debt" formatted="false">Total Card Debt</string>
    <string name="ah_assets_cards" formatted="false">My Assets &amp; Cards</string>
    <string name="ah_add_asset" formatted="false">Add Asset</string>
    <string name="ah_delete_account_title" formatted="false">Delete Account?</string>
    <string name="ah_card_preview" formatted="false">Card Preview</string>
    <string name="ah_account_identity" formatted="false">ACCOUNT IDENTITY</string>
    <string name="ah_account_card_name" formatted="false">Account / Card Name</string>
    <string name="ah_account_type" formatted="false">Account Type</string>
    <string name="ah_last_four_example" formatted="false">e.g. 4321</string>
    <string name="ah_current_balance_debt" formatted="false">CURRENT BALANCE &amp; DEBT</string>
    <string name="ah_current_debt_amount" formatted="false">Current Debt Amount ($)</string>
    <string name="ah_current_balance_amount" formatted="false">Current Balance Amount ($)</string>
    <string name="ah_quick_adjust" formatted="false">1-Tap Quick Adjust</string>
...
